--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -89,6 +89,37 @@
             padding: 30px;
         }
 
+        /* Navigation Tabs */
+        .nav-tabs {
+            display: flex;
+            background: #f8f9fa;
+            border-bottom: 1px solid #e2e8f0;
+            padding: 0 30px;
+        }
+
+        .nav-tab {
+            background: none;
+            border: none;
+            padding: 15px 25px;
+            font-size: 16px;
+            font-weight: 500;
+            color: #718096;
+            cursor: pointer;
+            border-bottom: 3px solid transparent;
+            transition: all 0.2s ease;
+        }
+
+        .nav-tab:hover {
+            color: #4299e1;
+            background: rgba(66, 153, 225, 0.1);
+        }
+
+        .nav-tab.active {
+            color: #4299e1;
+            border-bottom-color: #4299e1;
+            background: white;
+        }
+
         .stats-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -276,6 +307,149 @@
             font-size: 24px;
             font-weight: 600;
         }
+
+        /* Tab Content */
+        .tab-content {
+            display: none;
+        }
+
+        .tab-content.active {
+            display: block;
+        }
+
+        /* Profile Styles */
+        .profile-section {
+            max-width: 800px;
+        }
+
+        .profile-card {
+            background: #f8f9fa;
+            border-radius: 8px;
+            padding: 25px;
+            margin-bottom: 25px;
+        }
+
+        .profile-card h3 {
+            margin-bottom: 20px;
+            color: #2d3748;
+            font-size: 18px;
+            font-weight: 600;
+        }
+
+        .profile-info {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 15px;
+        }
+
+        .info-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 0;
+            border-bottom: 1px solid #e2e8f0;
+        }
+
+        .info-item label {
+            font-weight: 600;
+            color: #4a5568;
+        }
+
+        .info-item span {
+            color: #2d3748;
+        }
+
+        /* TOTP Styles */
+        .totp-status {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            border: 2px solid #e2e8f0;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+
+        .status-info {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .status-icon {
+            font-size: 24px;
+        }
+
+        .status-description {
+            color: #718096;
+            margin: 5px 0 0 0;
+        }
+
+        .totp-setup {
+            border: 2px solid #4299e1;
+            border-radius: 8px;
+            padding: 25px;
+            background: #f7fafc;
+        }
+
+        .setup-step {
+            margin-bottom: 25px;
+        }
+
+        .setup-step h4 {
+            color: #2d3748;
+            margin-bottom: 10px;
+        }
+
+        .setup-step p {
+            color: #718096;
+            margin-bottom: 15px;
+        }
+
+        .qr-code-container {
+            display: flex;
+            justify-content: center;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            margin: 15px 0;
+        }
+
+        .totp-input-group {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            margin-bottom: 15px;
+        }
+
+        .totp-input-group input {
+            width: 150px;
+        }
+
+        /* Password Form */
+        .password-form {
+            max-width: 400px;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 600;
+            color: #4a5568;
+        }
+
+        .success {
+            background: #c6f6d5;
+            color: #22543d;
+            padding: 10px;
+            border-radius: 6px;
+            margin: 10px 0;
+            display: none;
+        }
     </style>
 </head>
 
@@ -327,50 +501,165 @@
             </div>
         </header>
 
+        <!-- Navigation Tabs -->
+        <nav class="nav-tabs" style="display: flex;">
+            <button id="usersTabBtn" class="nav-tab active" onclick="switchTab('users')">User Management</button>
+            <button id="profileTabBtn" class="nav-tab" onclick="switchTab('profile')">My Profile</button>
+        </nav>
+
         <main class="main-content">
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-number" id="totalUsers">-</div>
-                    <div class="stat-label">Total Users</div>
+            <!-- Users Tab Content -->
+            <div id="usersTab" class="tab-content active">
+                <div class="stats-grid">
+                    <div class="stat-card">
+                        <div class="stat-number" id="totalUsers">-</div>
+                        <div class="stat-label">Total Users</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-number" id="activeUsers">-</div>
+                        <div class="stat-label">Active Users</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-number" id="lockedUsers">-</div>
+                        <div class="stat-label">Locked Users</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-number" id="adminUsers">-</div>
+                        <div class="stat-label">Admin Users</div>
+                    </div>
                 </div>
-                <div class="stat-card">
-                    <div class="stat-number" id="activeUsers">-</div>
-                    <div class="stat-label">Active Users</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number" id="lockedUsers">-</div>
-                    <div class="stat-label">Locked Users</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number" id="adminUsers">-</div>
-                    <div class="stat-label">Admin Users</div>
+
+                <div class="users-section">
+                    <div class="section-header">
+                        <h2 class="section-title">User Management</h2>
+                        <button id="addUserBtn" class="btn btn-primary">Add New User</button>
+                    </div>
+
+                    <div id="usersLoading" class="loading">Loading users...</div>
+                    <div id="usersError" class="error"></div>
+
+                    <table id="usersTable" class="users-table">
+                        <thead>
+                            <tr>
+                                <th>Username</th>
+                                <th>Email</th>
+                                <th>Name</th>
+                                <th>Role</th>
+                                <th>Status</th>
+                                <th>Last Login</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="usersTableBody">
+                        </tbody>
+                    </table>
                 </div>
             </div>
 
-            <div class="users-section">
-                <div class="section-header">
-                    <h2 class="section-title">User Management</h2>
-                    <button id="addUserBtn" class="btn btn-primary">Add New User</button>
+            <!-- Profile Tab Content -->
+            <div id="profileTab" class="tab-content" style="display: none;">
+                <div class="profile-section">
+                    <h2 class="section-title">My Profile</h2>
+
+                    <!-- User Info Section -->
+                    <div class="profile-card">
+                        <h3>Account Information</h3>
+                        <div class="profile-info">
+                            <div class="info-item">
+                                <label>Username:</label>
+                                <span id="profileUsername">-</span>
+                            </div>
+                            <div class="info-item">
+                                <label>Email:</label>
+                                <span id="profileEmail">-</span>
+                            </div>
+                            <div class="info-item">
+                                <label>Name:</label>
+                                <span id="profileName">-</span>
+                            </div>
+                            <div class="info-item">
+                                <label>Role:</label>
+                                <span id="profileRole">-</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- TOTP Section -->
+                    <div class="profile-card">
+                        <h3>Two-Factor Authentication (TOTP)</h3>
+                        <div class="totp-section">
+                            <div id="totpDisabled" class="totp-status">
+                                <div class="status-info">
+                                    <span class="status-icon">🔒</span>
+                                    <div>
+                                        <p><strong>Two-Factor Authentication is disabled</strong></p>
+                                        <p class="status-description">Add an extra layer of security to your account by
+                                            enabling TOTP.</p>
+                                    </div>
+                                </div>
+                                <button id="enableTotpBtn" class="btn btn-primary">Enable TOTP</button>
+                            </div>
+
+                            <div id="totpEnabled" class="totp-status" style="display: none;">
+                                <div class="status-info">
+                                    <span class="status-icon">✅</span>
+                                    <div>
+                                        <p><strong>Two-Factor Authentication is enabled</strong></p>
+                                        <p class="status-description">Your account is protected with TOTP.</p>
+                                    </div>
+                                </div>
+                                <button id="disableTotpBtn" class="btn btn-danger">Disable TOTP</button>
+                            </div>
+
+                            <!-- TOTP Setup -->
+                            <div id="totpSetup" class="totp-setup" style="display: none;">
+                                <div class="setup-step">
+                                    <h4>Step 1: Scan QR Code</h4>
+                                    <p>Use your authenticator app (Google Authenticator, Authy, etc.) to scan this QR
+                                        code:</p>
+                                    <div id="qrCodeContainer" class="qr-code-container">
+                                        <!-- QR code will be inserted here -->
+                                    </div>
+                                </div>
+
+                                <div class="setup-step">
+                                    <h4>Step 2: Enter TOTP Code</h4>
+                                    <p>Enter the 6-digit code from your authenticator app to complete setup:</p>
+                                    <div class="totp-input-group">
+                                        <input type="text" id="totpConfirmCode" class="form-input" placeholder="000000"
+                                            maxlength="6" required>
+                                        <button id="confirmTotpBtn" class="btn btn-primary">Confirm & Enable</button>
+                                    </div>
+                                    <div id="totpSetupError" class="error"></div>
+                                </div>
+
+                                <button id="cancelTotpBtn" class="btn btn-secondary">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Change Password Section -->
+                    <div class="profile-card">
+                        <h3>Change Password</h3>
+                        <form id="changePasswordForm" class="password-form">
+                            <div class="form-group">
+                                <label for="currentPassword">Current Password</label>
+                                <input type="password" id="currentPassword" class="form-input" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="newPassword">New Password</label>
+                                <input type="password" id="newPassword" class="form-input" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="confirmPassword">Confirm New Password</label>
+                                <input type="password" id="confirmPassword" class="form-input" required>
+                            </div>
+                            <div id="passwordChangeError" class="error"></div>
+                            <div id="passwordChangeSuccess" class="success"></div>
+                            <button type="submit" class="btn btn-primary">Change Password</button>
+                        </form>
+                    </div>
                 </div>
-
-                <div id="usersLoading" class="loading">Loading users...</div>
-                <div id="usersError" class="error"></div>
-
-                <table id="usersTable" class="users-table">
-                    <thead>
-                        <tr>
-                            <th>Username</th>
-                            <th>Email</th>
-                            <th>Name</th>
-                            <th>Role</th>
-                            <th>Status</th>
-                            <th>Last Login</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="usersTableBody">
-                    </tbody>
-                </table>
             </div>
         </main>
     </div>
