feat(ui): add form validation for username and email

--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -395,7 +395,9 @@
                             </div>
                             <div class="col-md-8">
                                 <label for="userPassword" class="form-label">Password *</label>
-                                <input type="password" id="userPassword" class="form-control" required>
+                                <input type="password" id="userPassword" class="form-control" required 
+                                       placeholder="Enter password">
+                                <div class="form-text">Leave blank when editing to keep current password</div>
                             </div>
                             <div class="col-md-4">
                                 <label for="userRole" class="form-label">Role</label>
