feat(auth): implement refresh token functionality with remember me option

--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -86,6 +86,19 @@
                         <label for="loginPassword" class="form-label">Password</label>
                         <input type="password" id="loginPassword" class="form-control" required>
                     </div>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" id="rememberMe" class="form-check-input">
+                        <label for="rememberMe" class="form-check-label">
+                            <i class="bi bi-shield-lock-fill me-1"></i>
+                            Keep me logged in for 30 days
+                        </label>
+                        <div class="form-text">
+                            <small class="text-muted">
+                                <i class="bi bi-info-circle me-1"></i>
+                                Uses secure HTTP-only cookies for enhanced security
+                            </small>
+                        </div>
+                    </div>
                     <button type="submit" class="btn btn-primary w-100">Login</button>
                 </form>
             </div>
